--- a/leaderboard/src/App.css
+++ b/leaderboard/src/App.css
@@ -2,11 +2,7 @@
 
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  font-family: 'Roboto Slab'
 }
 
 .Board {
@@ -15,12 +11,10 @@
   font-family: 'Roboto Slab'
 }
 
-.Header .Board {
-  font-family: inherit;
-  color: grey;
-
+.Intro {
+  font-family: inherit, sans-serif;
+  
 }
-
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
