Split button for plus and minus capabilities, made it a bit prettier.

--- a/leaderboard/src/App.css
+++ b/leaderboard/src/App.css
@@ -1,4 +1,4 @@
-@import "Fonts.css";
+@import "./Fonts.css";
 
 .App {
   text-align: center;
@@ -13,7 +13,7 @@
 }
 
 .Intro {
-  font-family: inherit, sans-serif;
+  font-family: inherit;
 }
 
 
